--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/react-redux": "^7.1.24",
     "@types/rx": "^4.1.2",
     "@types/styled-components": "^5.1.25",
+    "focus-trap": "^7.0.0",
+    "focus-trap-react": "^9.0.2",
     "ramda": "^0.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
