--- a/package.json
+++ b/package.json
@@ -33,12 +33,15 @@
     "build": "react-scripts build",
     "test-react": "react-scripts test",
     "eject": "react-scripts eject",
-    "test": "jest"
+    "test": "jest",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "plugin:storybook/recommended"
     ]
   },
   "browserslist": {
@@ -54,11 +57,24 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.0.20",
+    "@storybook/addon-interactions": "^7.0.20",
+    "@storybook/addon-links": "^7.0.20",
+    "@storybook/blocks": "^7.0.20",
+    "@storybook/preset-create-react-app": "^7.0.20",
+    "@storybook/react": "^7.0.20",
+    "@storybook/react-webpack5": "^7.0.20",
+    "@storybook/testing-library": "^0.0.14-next.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@types/jest": "^27.5.2",
     "@types/ramda": "^0.28.15",
+    "babel-plugin-named-exports-order": "^0.0.2",
+    "eslint-plugin-storybook": "^0.6.12",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
-    "ts-jest": "^28.0.8"
+    "prop-types": "^15.8.1",
+    "storybook": "^7.0.20",
+    "ts-jest": "^28.0.8",
+    "webpack": "^5.86.0"
   }
 }
