--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
   "name": "sandbox",
   "version": "0.1.0",
-  "private": true,
+  "description": "A simple React component library",
+  "main": "index.js",
+  "types": "index.d.ts",
+  "author": {
+    "name": "Agnieszka Sierbista",
+    "email": "agnieszka.sierbista@gmail.com"
+  },
+  "license": "ISC",
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/react": "^13.3.0",
@@ -26,7 +33,8 @@
     "styled-components": "^5.3.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack-cli": "^5.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,7 +45,8 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "clean": "rm -rf dist",
-    "build-dist": "npm run clean && tsc --config ./tsconfig-dist.json && cp package.json README.md ./dist"
+    "build-dist": "npm run clean && tsc -p ./tsconfig-dist.json && cp package.json README.md ./dist",
+    "build-webpack": "npx webpack --config webpack.config.js"
   },
   "eslintConfig": {
     "extends": [
@@ -71,12 +80,14 @@
     "@types/jest": "^27.5.2",
     "@types/ramda": "^0.28.15",
     "babel-plugin-named-exports-order": "^0.0.2",
+    "css-loader": "^6.8.1",
     "eslint-plugin-storybook": "^0.6.12",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
     "prop-types": "^15.8.1",
     "storybook": "^7.0.20",
     "ts-jest": "^28.0.8",
+    "ts-loader": "^9.4.3",
     "webpack": "^5.86.0"
   }
 }
