--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
       "dom.iterable",
       "esnext"
     ],
-    "allowJs": true,
-    "skipLibCheck": true,
+//    "allowJs": true,
+//    "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
@@ -17,10 +17,15 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
+    "outDir": "dist",
+    "jsx": "react-jsx",
+    "sourceMap": true,
+    "declaration": true
   },
+
   "include": [
-    "src"
+    "src/components/index.ts"
+  ],
+  "exclude": [
   ]
 }
